MODINV-1100: test blocking update